@@ -205,19 +205,14 @@ function [r, p, k, e] = residue (b, a, toler)
   p = roots (a);
   lp = length (p);
 
-
   ## Determine if the poles are (effectively) zero.
-  index = find (abs (p) < toler);
-  if (length (index) != 0)
-    p (index) = 0;
-  endif
+
+  p(abs (p) < toler) = 0;
 
   ## Determine if the poles are (effectively) real.
 
-  index = find (abs(p)>=toler && ( abs(imag(p)) ./ abs(p) < toler ));
-  if (length (index) != 0)
-    p (index) = real (p (index));
-  endif
+  index = (abs (p) >= toler && (abs (imag (p)) ./ abs (p) < toler));
+  p(index) = real (p(index));
 
   ## Find the direct term if there is one.
 
